# FluxDown

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  README.zh-CN.md  issue.md  pubspec.yaml  test_urls.md
.github/workflows/: build-extension.yml  build-windows.yml  mirror-release.yml  release.yml  signing-test.yml  test-cn-server.yml  triage.yml
.omp/: RULES.md  WATCHDOG.md  config.yml
.omp/skills/release/: SKILL.md
assets/i18n/: en.json  zh.json  zh_Hant.json
examples/plugins/manifest-playground/: manifest.json  resolve.js
examples/plugins/youtube/: manifest.json  resolve.js
fluxDown/: package-lock.json  package.json  wxt.config.ts
fluxDown/entrypoints/: background.ts  fetch-interceptor.ts  resource-detector.content.ts
fluxDown/entrypoints/options/: index.html  main.ts  options.css
fluxDown/entrypoints/popup/: index.html  main.ts  style.css
fluxDown/entrypoints/resource-ui.content/: index.ts  style.css
fluxDown/utils/: dash-manifest.test.ts  dash-manifest.ts  download-dispatch.ts  file-icons.ts  i18n.ts  native-messaging.ts  remote-server.ts  resource-types.test.ts  resource-types.ts  settings.ts  track-detector.ts
fluxDown/utils/locales/: en.ts  zh-CN.ts
installer/windows/: setup.iss
ios/Runner/: AppDelegate.swift  Info.plist
lib/: main.dart
lib/src/i18n/: locale_provider.dart  translations.dart
lib/src/mobile/: mobile_app.dart  mobile_shell.dart  mobile_ui.dart
lib/src/models/: custom_category.dart  download_controller.dart  download_queue.dart  download_task.dart  list_entity.dart  manifest_breadcrumb.dart  manifest_selection.dart  settings_provider.dart  task_group.dart  view_prefs.dart
lib/src/pages/: home_page.dart  settings_page.dart
lib/src/popup/: popup_app.dart  popup_payload.dart
lib/src/services/: analytics_service.dart  app_icon_service.dart  build_stats.dart  external_download_service.dart  feedback_service.dart  kv_store.dart  log_service.dart  notification_service.dart  platform_utils.dart  popup_window_service.dart  quick_download_submitter.dart  resolve_preview_client.dart  resolve_variant_service.dart  tray_service.dart  update_service.dart  window_state_service.dart  windows_toast_helper.dart
lib/src/theme/: app_metrics.dart  app_theme.dart  flux_metric_tokens.dart  flux_theme_tokens.dart  segment_palette.dart  theme_provider.dart
lib/src/widgets/: add_device_dialog.dart  bt_file_list_widget.dart  bt_file_selection_dialog.dart  bt_file_selection_shared.dart  sidebar.dart  (+35 more)
linux/: CMakeLists.txt
linux/runner/: popup_window_host.cc  popup_window_host.h
macos/Runner/: AppDelegate.swift  FloatingBallPanel.swift  PopupWindowHost.swift
macos/Runner.xcodeproj/: project.pbxproj
native/api/: Cargo.toml
native/api/examples/: gen_openapi.rs
native/api/src/: aria2.rs  auth.rs  jsonrpc.rs  jsonrpc_ws.rs  lib.rs  mcp.rs  openapi.rs  routes.rs  server.rs  service.rs  takeover.rs  tests.rs  types.rs
native/api/tests/: task_referrer.rs
native/engine/: Cargo.toml  build.rs
native/engine/examples/: ed2k_e2e.rs  headless_download.rs
native/engine/src/: bt_downloader.rs  bt_seeding.rs  dash_downloader.rs  data_dir.rs  db.rs  download_manager.rs  downloader.rs  events.rs  ftp_downloader.rs  hls_downloader.rs  lib.rs  logger.rs  model.rs  segment_coordinator.rs  selection.rs
native/engine/src/cdn/: health.rs  hints.rs  mod.rs  node_pool.rs  resolver.rs  telemetry.rs
native/engine/src/components/: ffmpeg.rs  mod.rs  ytdlp.rs
native/engine/src/ed2k/: link.rs  mod.rs  peer.rs  proto.rs  server.rs
native/engine/src/link/: crypto.rs  discovery.rs  error.rs  identity.rs  manager.rs  mod.rs  pairing.rs  store.rs  transport.rs  types.rs
native/engine/src/plugin/: manager.rs  manifest.rs  mod.rs  quickjs.rs  runtime.rs
native/engine/tests/: bt_file_selection.rs  corruption_test.rs  dash_track_pair_progress.rs  dash_track_pair_resume.rs  example_plugins.rs  fxplug_install.rs  multi_cdn.rs  pause_resume_repro.rs  plugin_lazy_resolve.rs  plugin_manifest_flow.rs  plugin_ytdlp.rs  realtest.rs  task_referrer_snapshot.rs
native/fluxdown_updater/: Cargo.toml
native/fluxdown_updater/src/: main.rs
native/hub/: Cargo.toml  build.rs
native/hub/src/: api_host.rs  dash_downloader.rs  db.rs  download_manager.rs  downloader.rs  file_association.rs  ftp_downloader.rs  hls_downloader.rs  lib.rs  native_messaging.rs  nmh_registry.rs  proxy_config.rs  reveal_file.rs  rinf_selection.rs  rinf_sink.rs  segment_coordinator.rs  signal_bridge.rs  speed_limiter.rs  updater.rs
native/hub/src/actors/: download_actor.rs  mod.rs
native/hub/src/signals/: mod.rs
native/hub/tests/: bt_selection_timeout.rs  desktop_regression_smoke.rs
native/server/: Cargo.toml
native/server/src/: actor.rs  analytics.rs  config.rs  host.rs  main.rs  routes_ext.rs  wire.rs  ws_hub.rs
packaging/openwrt/: build_ipk.sh
packaging/qnap/: build_qpkg.sh  package_routines  qpkg.cfg
packaging/synology/: build_spk.sh
scripts/: build_arch_pkg.sh  gen_ico.py  gen_icons.ts  send_notify.py  test_file_server.py
test/: bt_file_tree_widget_test.dart  category_save_dir_test.dart  detail_panel_footer_overflow_test.dart  file_category_test.dart  list_sections_test.dart  manifest_select_dialog_test.dart  manifest_selection_test.dart  popup_payload_test.dart  popup_window_service_test.dart  portable_migration_test.dart  quick_download_form_append_test.dart  remote_task_test.dart  split_event_data_test.dart  sync_catalog_test.dart  task_columns_test.dart  task_group_row_tap_test.dart  task_group_test.dart  task_referrer_test.dart  torrent_assoc_toggle_test.dart  ui_scale_widget_test.dart  view_prefs_test.dart  widget_test.dart
test/theme/: flux_metric_tokens_test.dart  flux_theme_tokens_test.dart
web/: index.html  package.json  vite.config.ts
web/src/: design.css  main.tsx
website/: .env.example  README.md  astro.config.mjs  deploy.sh  docker-compose.yml  package-lock.json  package.json
website/public/: openapi.json  robots.txt
website/scripts/: indexnow-ping.mjs
windows/: CMakeLists.txt
windows/runner/: popup_window_host.cpp  popup_window_host.h
(+178 files in other folders)
