[package]
name = "fluxdown_api"
version = "0.1.0"
edition = "2024"

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
wildcard_imports = "deny"

[dependencies]
async-trait = "0.1.89"
axum = "0.8.9"
fluxdown_engine = { version = "0.1.0", path = "../engine" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["rt", "net", "macros", "io-util"] }
tokio-util = "0.7.18"
utoipa = "5.5.0"
