[package]
name = "fluxdown_engine"
version = "0.1.0"
edition = "2024"

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
wildcard_imports = "deny"

[dependencies]
aes = "0.8"
async-compression = { version = "0.4", features = ["tokio", "gzip", "brotli", "deflate", "zstd"] }
async-trait = "0.1.87"
base64 = "0.22"
bytes = "1"
cbc = "0.1"
chrono = { version = "0.4.43", default-features = false, features = ["clock", "std"] }
dash-mpd = { version = "0.19", default-features = false }
ed25519-dalek = { version = "3.0.0", optional = true }
encoding_rs = "0.8"
flate2 = "1"
futures-util = "0.3"
hex = "0.4"
hkdf = { version = "0.12", optional = true }
hmac = { version = "0.12", optional = true }
igd-next = { version = "0.17.1", features = ["aio_tokio"] }
m3u8-rs = "6"
md-5 = "0.10"
md4 = "0.10"
mdns-sd = { version = "0.20.2", optional = true }
rand = "0.9"
rquickjs = { version = "0.12.1", features = ["full-async", "parallel"], optional = true }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1"
sha1 = "0.10"
sha2 = "0.10"
sqlx = { version = "0.9", default-features = false, features = ["derive", "runtime-tokio", "tls-rustls-ring-webpki", "sqlite", "postgres", "any"] }
suppaftp = { version = "6", default-features = false }
thiserror = "2.0"
tokio = { version = "1.45.0", features = ["rt", "rt-multi-thread", "macros", "time", "sync", "fs", "net", "io-util", "process"] }
tokio-util = { version = "0.7", features = ["io"] }
tracing = "0.1"
ts2mp4 = "0.3"
url = "2"
uuid = { version = "1", features = ["v4"] }
x25519-dalek = { version = "3", optional = true, features = ["static_secrets", "zeroize"] }
# 插件 zip 安装（跨桌面/服务端；仅 plugins feature 开启时启用）
zip = { version = "2", default-features = false, features = ["deflate"], optional = true }

[target."cfg(windows)".dependencies]
librqbit = { version = "8", default-features = false, features = ["default-tls"] }
reqwest = { version = "0.12", features = ["stream", "native-tls", "cookies", "json", "socks"] }
# 固定 0.59：0.61 引入 windows-link(raw-dylib)，与 cdylib 构建在 CI 上不兼容
windows-sys = { version = "0.59", features = ["Win32_Storage_FileSystem"] }
winreg = "0.55"

[target."cfg(not(windows))".dependencies]
libc = "0.2"
librqbit = { version = "8", default-features = false, features = ["rust-tls"] }
# default-features = false：去掉 default-tls（native-tls→openssl，Android 交叉编译无 openssl）；
# 其余默认特性显式保留，Linux/macOS 行为不变
reqwest = { version = "0.12", default-features = false, features = ["stream", "rustls-tls-native-roots", "cookies", "json", "socks", "charset", "http2", "system-proxy", "macos-system-configuration"] }

[dev-dependencies]
http = "1.4.0"

[features]
# 默认关闭；desktop/server 构建显式开启，mobile（Android/iOS）保持关闭以免背 JS 引擎债。
plugins = ["dep:rquickjs", "dep:zip"]
# 组件托管安装（ffmpeg 下载/解压）；desktop/server 开启，mobile/CLI 关闭。
components = ["dep:zip"]
# 本地设备互联（P2P 局域网配对 + mDNS 发现 + 直连传输）。desktop hub 与 headless
# server 开启；mobile（Android/iOS）关闭——mDNS 在移动端需原生 NsdManager/Bonjour
# 权限，且本地配对定位为桌面/NAS 场景。关闭时下载主链路零变化（link 模块整体 cfg 门控）。
link = ["dep:mdns-sd", "dep:ed25519-dalek", "dep:x25519-dalek", "dep:hkdf", "dep:hmac"]
