[package]
# Do not change the name of this crate.
name = "hub"
version = "0.1.0"
edition = "2024"

[lib]
# `lib` is required for non-library targets,
# such as tests and benchmarks.
# `cdylib` is for Linux, Android, Windows, and web.
# `staticlib` is for iOS and macOS.
crate-type = ["lib", "cdylib", "staticlib"]

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
wildcard_imports = "deny"

[dependencies]
rinf = "8.9.0"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.45.0", features = ["rt", "rt-multi-thread", "macros", "time", "sync", "fs"] }
async-trait = "0.1.87"
messages = "0.3.1"
reqwest = { version = "0.12", features = ["stream", "rustls-tls", "cookies", "json", "socks"] }
rusqlite = { version = "0.34", features = ["bundled"] }
futures-util = "0.3"
uuid = { version = "1", features = ["v4"] }
tokio-util = "0.7"
thiserror = "2.0"
suppaftp = { version = "6" }
serde_json = "1"
librqbit = { version = "8", default-features = false, features = ["rust-tls"] }
bytes = "1"
tracing = "0.1"
url = "2"

[target.'cfg(windows)'.dependencies]
winreg = "0.55"

# Uncomment below to target the web.
# tokio_with_wasm = { version = "0.8.5", features = ["rt", "macros", "time"] }
# wasm-bindgen = "0.2.100"
