[package]
# Do not change the name of this crate.
name = "hub"
version = "0.1.0"
edition = "2024"

[lib]
# `lib` is required for non-library targets,
# such as tests and benchmarks.
# `cdylib` is for Linux, Android, Windows, and web.
# `staticlib` is for iOS and macOS.
crate-type = ["lib", "cdylib", "staticlib"]

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
wildcard_imports = "deny"

[dependencies]
rinf = "8.9.0"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.45.0", features = ["rt", "rt-multi-thread", "macros", "time", "sync", "fs", "net", "io-util", "process"] }
async-trait = "0.1.87"
messages = "0.3.1"
futures-util = "0.3"
uuid = { version = "1", features = ["v4"] }
tokio-util = { version = "0.7", features = ["io"] }
async-compression = { version = "0.4", features = ["tokio", "gzip", "brotli", "deflate", "zstd"] }
thiserror = "2.0"
# ftp_downloader 只用同步 FtpStream（无 TLS），禁用 default-features 移除 native-tls 依赖
suppaftp = { version = "6", default-features = false }
serde_json = "1"
bytes = "1"
tracing = "0.1"
url = "2"
m3u8-rs = "6"
aes = "0.8"
cbc = "0.1"
dash-mpd = { version = "0.19", default-features = false }
ts2mp4 = "0.3"
sha1 = "0.10"
sha2 = "0.10"
md-5 = "0.10"
hex = "0.4"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
# 用于解码扩展端通过 NM 协议传来的 raw POST body（base64 编码）
base64 = "0.22"
# 用于在 URL/Content-Disposition 文件名解码失败时回退到 GBK（中文老站点常用）
encoding_rs = "0.8"
# 基线（含 mobile：Android/iOS）：带 components（仅拉 zip，可交叉编译），不带 plugins。
# plugins → rquickjs-sys 对 Android/iOS ABI 无预置 bindings，交叉编译必失败，故 mobile 关闭；
# hub 源码里所有 plugin 相关代码同步用 build.rs 的 `hub_plugins` cfg 门控（同源判定 target_os）。
# 未来移动端若要支持插件，把 "plugins" 加进本行、并让 build.rs 对 android/ios 也开 hub_plugins 即可。
fluxdown_engine = { version = "0.1.0", path = "../engine", features = ["components"] }
fluxdown_api = { version = "0.1.0", path = "../api" }

# desktop（Windows/macOS/Linux）追加 plugins + link（本地设备互联）；mobile 保持关闭
[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
fluxdown_engine = { version = "0.1.0", path = "../engine", features = ["plugins", "components", "link"] }
fluxdown_api = { version = "0.1.0", path = "../api", features = ["plugins"] }

[target.'cfg(windows)'.dependencies]
winreg = "0.55"
# Windows 用系统内置 Schannel（native-tls），完全绕开 aws-lc-sys 的 MSVC 编译问题
reqwest = { version = "0.12", features = ["stream", "native-tls", "cookies", "json", "socks"] }
librqbit = { version = "8", default-features = false, features = ["default-tls"] }
# 系统调用：SetFileInformationByHandle（文件预分配真正保留 NTFS 物理簇）
# 固定 0.59：0.61 引入 windows-link(raw-dylib)，与 cdylib 构建在 CI 上不兼容
# Win32_UI_Shell + WindowsAndMessaging：ShellExecuteW（打开文件/目录走系统关联，等价双击，见 reveal_file.rs）
windows-sys = { version = "0.59", features = ["Win32_Storage_FileSystem", "Win32_UI_Shell", "Win32_UI_WindowsAndMessaging"] }
# ZIP 解析：用于 bootstrap fluxdown_updater.exe（从下载的 ZIP 中提取，兼容从旧版升级的用户）
zip = { version = "2", default-features = false, features = ["deflate"] }

[target.'cfg(not(windows))'.dependencies]
# Linux/macOS 用 rustls（纯 Rust，无系统 TLS 依赖）
# default-features = false：去掉 default-tls（native-tls→openssl，Android 交叉编译无 openssl）；
# 其余默认特性显式保留，Linux/macOS 行为不变
reqwest = { version = "0.12", default-features = false, features = ["stream", "rustls-tls-native-roots", "cookies", "json", "socks", "charset", "http2", "system-proxy", "macos-system-configuration"] }
librqbit = { version = "8", default-features = false, features = ["rust-tls"] }
# 系统调用：fallocate（文件预分配）、posix_fadvise（页缓存释放）
libc = "0.2"

[dev-dependencies]
http = "1.4.0"

# Uncomment below to target the web.
# tokio_with_wasm = { version = "0.8.5", features = ["rt", "macros", "time"] }
# wasm-bindgen = "0.2.100"
