[package]
name = "fluxdown_server"
version = "0.1.0"
edition = "2024"

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
wildcard_imports = "deny"

[[bin]]
name = "fluxdown-server"
path = "src/main.rs"

[dependencies]
async-trait = "0.1.89"
axum = { version = "0.8.9", features = ["ws"] }
base64 = "0.22"
fluxdown_api = { version = "0.1.0", path = "../api", package = "fluxdown_api" }
fluxdown_engine = { version = "0.1.0", path = "../engine", package = "fluxdown_engine" }
fs2 = "0.4.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "sync", "signal", "net", "io-util", "fs", "time"] }
tokio-util = { version = "0.7.18", features = ["io"] }
tower-http = { version = "0.7.0", features = ["fs"] }
utoipa = "5.5.0"
uuid = { version = "1.23.4", features = ["v4"] }
